--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -8,8 +8,10 @@ jobs:
   build:
     name: Flutter Web Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Repo Checkout
+      - name: Checkout the code
         uses: actions/checkout@v2
 
       - name: Get pubspec version
@@ -28,33 +30,29 @@ jobs:
       - name: Flutter pub get
         run: flutter pub get
 
-      - name: Flutter test
-        run: flutter test
+#      - name: Flutter test
+#        run: flutter test
 
       - name: Creating a GitHub Tag
-        uses: mathieudutour/github-tag-action@v5.6
+        uses: mathieudutour/github-tag-action@v6
         with:
           custom_tag: ${{ env.VERSION }}
-          github_token: ${{ secrets.commit_secret }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a GitHub Release
         uses: ncipollo/release-action@v1
         with:
           tag: v${{ env.VERSION }}
-          token: ${{ secrets.commit_secret }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Flutter build web
         run: flutter build web
 
       - name: Publishing gh-pages
         run: |
-          cd example/build/web
-          git init
-          git config --global user.email edufolly@gmail.com
-          git config --global user.name "Eduardo Folly"
-          git status
-          git remote add origin https://${{ secrets.commit_secret }}@github.com/edufolly/folly_fields.git
           git checkout -b gh-pages
+          git config --global user.email ${{ github.actor }}@users.noreply.github.com
+          git config --global user.name "GitHub Actions"
           git add --all
-          git commit -m "Publishing web project ($GITHUB_RUN_NUMBER)."
-          git push origin gh-pages -f
+          git commit -a -m "Publishing web project v${{ env.VERSION }}."
+          git push origin gh-pages --force
