--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -49,10 +49,7 @@ jobs:
         run: flutter build web
 
       - name: Publishing gh-pages
-        run: |
-          git checkout -b gh-pages
-          git config --global user.email ${{ github.actor }}@users.noreply.github.com
-          git config --global user.name "GitHub Actions"
-          git add --all
-          git commit -a -m "Publishing web project v${{ env.VERSION }}."
-          git push origin gh-pages --force
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_dir: ./build/web
+          github_token: ${{ secrets.GITHUB_TOKEN }}
